k8s-config.yaml
# Frontend Deployment (Pod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capture-the-block
  namespace: default
  labels:
    app: capture-the-block
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capture-the-block
  # Pod template
  template:
    metadata:
      labels:
        app: capture-the-block
    spec:
      containers:
        - name: capture-the-block
          image: yodascholtz/capture-the-block:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: capture-the-block
  namespace: default
  labels:
    app: capture-the-block
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: capture-the-block
